--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build --prod",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "start:client": "ng serve",
+    "start": "npm run start:client",
+    "build": "ng build",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -21,10 +20,15 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
     "etl": "^0.5.11",
+    "express": "^4.16.3",
+    "method-override": "^2.3.10",
+    "morgan": "^1.9.0",
     "pg": "^7.4.1",
     "rxjs": "^5.5.6",
+    "webpack": "^4.6.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
@@ -42,10 +46,12 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "npm-run-all": "^4.1.2",
     "protractor": "~5.1.2",
     "request": "^2.85.0",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "typescript": "~2.5.3",
+    "webpack-cli": "^2.1.2"
   }
 }
