--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start:client": "ng serve",
-    "start": "npm run start:client",
+    "start": "node server.js",
     "build": "ng build",
-    "lint": "ng lint"
+    "test": "ng test",
+    "lint": "ng lint",
+	"postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "~1.7.4",
+    "@angular/compiler-cli": "^5.2.0",
     "@angular/animations": "^5.2.0",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
