--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
+    "start:etl": "node etl.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-	"postinstall": "ng build --aot -prod"
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "~1.7.4",
-    "@angular/compiler-cli": "^5.2.0",
     "@angular/animations": "^5.2.0",
+    "@angular/cli": "~1.7.4",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
+    "@angular/compiler-cli": "^5.2.0",
     "@angular/core": "^5.2.0",
     "@angular/forms": "^5.2.0",
     "@angular/http": "^5.2.0",
@@ -30,8 +31,8 @@
     "method-override": "^2.3.10",
     "morgan": "^1.9.0",
     "pg": "^7.4.1",
+    "pg-promise": "^8.4.0",
     "rxjs": "^5.5.6",
-    "webpack": "^4.6.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
@@ -49,12 +50,10 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "npm-run-all": "^4.1.2",
     "protractor": "~5.1.2",
     "request": "^2.85.0",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3",
-    "webpack-cli": "^2.1.2"
+    "typescript": "~2.5.3"
   }
 }
