--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
-    "start:etl": "node etl.js",
+	"start:etl": "node src/etl/index.js",
+	"start:api": "node src/server/index.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -31,7 +32,6 @@
     "method-override": "^2.3.10",
     "morgan": "^1.9.0",
     "pg": "^7.4.1",
-    "pg-promise": "^8.4.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
