--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "^5.2.0",
     "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
+    "dotenv": "^5.0.1",
     "etl": "^0.5.11",
     "express": "^4.16.3",
     "pg": "^7.4.1",
